--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+index.js
 
 # testing
 /coverage
@@ -17,6 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.properties
 
 npm-debug.log*
 yarn-debug.log*
