--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-index.js
 
 # testing
 /coverage
@@ -14,6 +13,7 @@ index.js
 
 # misc
 .DS_Store
+*.env
 .env.local
 .env.development.local
 .env.test.local
